added whitepaper link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <h1>Hello, I am Ivan 😎</h1>
       <img src="images/ivan.jpg" alt="My profile picture" class="profile-picture">
       <p>I dig a lot into cryptocurrencies these days, especially bitcoin</p>
-      <a href="https://coinmarketcap.com/currencies/bitcoin/" target="_blank" class="btn-link">check bitcoin price there!</a>
+      <a href="https://bitcoin.org/bitcoin.pdf" target="_blank" class="btn-link">Read the whitepaper</a>
+      <br>
+      <a href="http://preev.com" target="_blank" class="btn-link">check the price</a>
     </div>
     <div class="card">
       <h2>Follow me</h2>
