--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="card">
       <h1>Hello, I am Ivan 😎</h1>
       <img src="images/ivan.jpg" alt="My profile picture" class="profile-picture">
-      <p>I dig a lot into cryptocurrencies these days, especially bitcoin</p>
+      <p>I dig a lot into the technology and economics of cryptocurrencies, especially bitcoin</p>
       <a href="https://bitcoin.org/bitcoin.pdf" target="_blank" class="btn-link">Read the whitepaper</a>
       <br>
       <a href="http://preev.com" target="_blank" class="btn-link">check the price</a>
