added btc on follow me

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="http://preev.com" target="_blank" class="btn-link">check the price</a>
     </div>
     <div class="card">
-      <h2>Follow me</h2>
+      <h2>Follow me ₿</h2>
         <ul class="list-inline">
           <li><a href="http://twitter.com/iperroud" target="_blank"><i class="fab fa-twitter"></i></a></li>
           <li><a href="https://www.linkedin.com/in/iperroud/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
