--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   <div class="container">
     <div class="card">
-      <h1>Hello, I am Ivan ₿</h1>
+      <h2>hello world.</h2>
+      <h1>I'm Ivan Perroud</h1>
       <img src="images/ivan.jpg" alt="My profile picture" class="profile-picture">
       <p>Actually learning web development! I am passionnate about economics and technology of cryptocurrencies too, especially bitcoin ₿.</p>
       <p>Feel free to discuss the topic with me on slack!</p>
