--- a/index.html
+++ b/index.html
@@ -9,15 +9,28 @@
 <body>
 
   <div class="container">
-    <div class="card">
-      <h5>hello world.</h5>
+    <div class="card top-card">
+      <h5>hello, world.</h5>
       <h1>I'm Ivan Perroud</h1>
-      <img src="images/ivan.jpg" alt="My profile picture" class="profile-picture">
-      <p>Actually learning web development! I am passionnate about economics and technology of cryptocurrencies too, especially bitcoin ₿.</p>
-      <p>Feel free to discuss the topic with me on slack!</p>
-      <a href="https://bitcoin.org/bitcoin.pdf" target="_blank" class="btn-link">Read the whitepaper</a>
-      <br>
-      <a href="http://preev.com" target="_blank" class="btn-link">check the price</a>
+      <div class="metier">
+        <div class="sub-metier">
+          IT Project manager
+        </div>
+        <div class="sub-metier">
+          Crypto Analyst
+        </div>
+        <div class="sub-metier">
+          Hodler
+        </div>
+      </div>
+      <!-- <a href="http://preev.com" target="_blank" class="btn-link">More about me</a> -->
+      <div class="social">
+        <h5>Follow me</h5>
+          <ul class="list-inline">
+            <li><a href="http://twitter.com/iperroud" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/iperroud/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+          </ul>
+      </div>
     </div>
     <div class="card">
       <h2>Follow me ₿</h2>
