--- a/index.html
+++ b/index.html
@@ -23,13 +23,8 @@
           Hodler
         </div>
       </div>
-      <!-- <a href="http://preev.com" target="_blank" class="btn-link">More about me</a> -->
-      <div class="social">
-        <h5>Follow me</h5>
-          <ul class="list-inline">
-            <li><a href="http://twitter.com/iperroud" target="_blank"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/iperroud/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-          </ul>
+      <div id="more-button">
+        <a href="#about" class="">More about me <i class="fas fa-angle-down"></i></a>
       </div>
     </div>
     <div class="card">
