--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           IT Project manager
         </div>
         <div class="sub-metier">
-          Crypto Analyst
+          LN node operator
         </div>
         <div class="sub-metier">
           Hodler
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="card">
-      <h2>Follow me ₿</h2>
+      <h2>Follow me</h2>
         <ul class="list-inline">
           <li><a href="http://twitter.com/iperroud" target="_blank"><i class="fab fa-twitter"></i></a></li>
           <li><a href="https://www.linkedin.com/in/iperroud/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
